[package]
name = "frontend-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_backend = { version = "*", features = ["egui_serde"] }
egui_window_glfw_passthrough = "0.4.2"
crossbeam-channel = "*"
egui_render_three_d = "*"


pretty-hex = "*"
memprocfs = "*"
nix = "*"
log = "*"
log4rs = "*"
mouse-rs = "*"
rand = "*"
rdev = "*"
named_constants = "*"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
rsa = "0.9.2"
serial2 = "0.2.6"
winapi = { version = "0.3.9", features = ["winerror"] }
serial2-tokio = { path = "serial2_tokio" }
image = {version =  "0.24.7", features = [] }
bincode = {version = "2.0.0-rc.3", features = ["serde", "derive"]}