[package]
name = "mem_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memprocfs = "5.8.14"
pretty-hex = "0.3.0"
crossbeam-channel = "*"
serde = { version = "1.0.188", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde", "derive"]}
serde_json = "1.0.107"
chrono = "*"
tokio = { version = "*", features = ["full"] }
inquire = "0.6.2"
